--- a/src/main/resources/static/css/demoweb.css
+++ b/src/main/resources/static/css/demoweb.css
@@ -6,6 +6,11 @@
     margin-bottom: 30px;
 }
 
+.content {
+    padding: 2em 4em;
+}
+
 .jumbotron {
     min-height: 800px;
+    background-color: #ffffff;
 }
